--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 
-<div id="vis"></div>
+<div id="vis">
+  class="header" id="myHeader">
+  <h2>Fatal Traffic Accidents From 2014 - 2019 </h2>
+</div> 
 
 <script type="text/javascript">
   var spec = "https://ctra0024.github.io/FIT3179/visualization.vl.json";
