--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
   <!-- Import vega-embed -->
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+  <title>Fatal Traffic Accidents From 2014 - 2019</title>
 </head>
 <body>
 
-<div id="vis"></div> 
-
-<h2>Fatal Traffic Accidents From 2014 - 2019 </h2>
+<div id="vis"></div>
   
 <script type="text/javascript">
   var spec = "https://ctra0024.github.io/FIT3179/visualization.vl.json";
