--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Fatal Traffic Accidents From 2014 - 2019</title>
+  <title>Fatal Traffic Accidents</title>
   <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
   <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
@@ -10,6 +10,7 @@
 </head>
 <body>
 
+<h1>Fatal Traffic Accidents Between 2014 And 2019</h1>
 <div id="vis"></div>
   
 <script type="text/javascript">
