--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 
-<h1>Fatal Traffic Accidents Between 2014 And 2019</h1>
+<h1 id="heading1">Fatal Traffic Accidents Between 2014 And 2019</h1>
 <div id="vis"></div>
   
 <script type="text/javascript">
-  var spec = "https://ctra0024.github.io/FIT3179/visualization.vl.json";
+  var spec = "https://ctra0024.github.io/FIT3179/stacked_and_line_overview.json";
   vegaEmbed('#vis', spec).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
