--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
-
-<h1 id="heading1">Fatal Traffic Accidents Between 2014 And 2019</h1>
+<centre>
+<h1 id="heading1", style="font-family: Arial">Fatal Traffic Accidents Between 2014 And 2019</h1>
+</centre>
+  
 <div id="vis"></div>
   
 <script type="text/javascript">
