--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
-<centre>
-<h1 id="heading1", style="font-family: Arial">Fatal Traffic Accidents Between 2014 And 2019</h1>
-</centre>
+  <center>
+  <h1 id="heading1">Fatal Traffic Accidents Between 2014 And 2019</h1>
+  </center>
   
 <div id="vis"></div>
   
