--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <center>
-  <h1 id="heading1">Fatal Traffic Accidents Between 2014 And 2019</h1>
+  <h1 id="heading1" style="font-family: Arial">Fatal Traffic Accidents Between 2014 And 2019</h1>
   </center>
   
 <div id="vis"></div>
