--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
   </center>
   
 <div id="vis"></div>
-  
+
+<center>
 <script type="text/javascript">
   var spec = "https://ctra0024.github.io/FIT3179/stacked_and_line_overview.json";
   vegaEmbed('#vis', spec).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
+</center>  
+  
 </body>
 </html>
