--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Fatal Traffic Accidents</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css"
         integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ"
         crossorigin="anonymous">
@@ -15,9 +16,11 @@
   <center>
   <h1 id="heading1" style="font-family: Arial">Fatal Traffic Accidents Between 2014 And 2019</h1>
   </center>
-  
-<div id="vis"></div>
 
+<center>
+<div id="vis"></div>
+</center>
+  
 <script type="text/javascript">
   var opt = {padding: left: 5, top: 5, right: 5, bottom: 5};
   var spec = "https://ctra0024.github.io/FIT3179/stacked_and_line_overview.json";
