--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <h1 id="heading1" style="font-family: Arial">Fatal Traffic Accidents Between 2014 And 2019</h1>
   </center>
 
-<center>
+// <center>
 <div id="vis"></div>
-</center>
+// </center>
   
 <script type="text/javascript">
   var opt = {padding: left: 5, top: 5, right: 5, bottom: 5};
