--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script type="text/javascript">
     var opt = {padding: left: 5, top: 5, right: 5, bottom: 5};
     var spec = "https://ctra0024.github.io/FIT3179/stacked_and_line_overview.json";
-    vegaEmbed('#vis', spec).then(function(result) {
+    vegaEmbed('#vis', spec, opt).then(function(result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
   </script>
