--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
   <!-- Import vega-embed -->
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+  <style>
+    background-color: lightgrey;
+    h1 {
+      text-align: center;
+      font-family: verdana;
+    }
+  </style>
 </head>
 <body>
-  <center>
-  <h1 id="heading1" style="font-family: Arial">Fatal Traffic Accidents Between 2014 And 2019</h1>
-  </center>
+  <h1 id="heading1">Fatal Traffic Accidents Between 2014 And 2019</h1>
 
   <div id="vis"></div>
 
