--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
   <style>
     body {
-    background-color: lightgrey;
+    padding: 25px;
     }
     h1 {
       text-align: center;
