--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     h1 {
       text-align: center;
       font-family: verdana;
+      padding-bottom:2cm;
+      padding-top:2cm;
     }
     div.vis1 {
     width: 300px;
