--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
     h1 {
       text-align: center;
       font-family: verdana;
-      padding-bottom:2cm;
-      padding-top:2cm;
+      padding-bottom:1cm;
+      padding-top:1cm;
     }
     div.vis1 {
-    width: 300px;
     padding: 25px;
-    background-color: lightblue;
+    margin: auto;
     }
   </style>
 </head>
