--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <h1 id="heading1">Fatal Traffic Accidents Between 2014 And 2019</h1>
 
-  <div id="vis1"></div>
+  <div id="vis1" class = "center"></div>
 
   <script type="text/javascript">
     var spec = "https://ctra0024.github.io/FIT3179/stacked_and_line_overview.json";
