--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       padding-bottom:1cm;
       padding-top:1cm;
     }
-    div.vis1 {
+    div#vis1 {
     padding: 50px;
     width: 50%;
     margin: auto;
