--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <style>
     body {
     padding: 25px;
+    background-color: lightgray;
+    opacity: 0.1;
     }
     h1 {
+      color:gray;
       text-align: center;
       font-family: verdana;
       padding-bottom:1cm;
