--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       padding-bottom:1cm;
       padding-top:1cm;
     }
+    h3 {
+      color:gray;
+      padding-left: 25px;
+      font-family: verdana;
+      padding-bottom:10px;
+      padding-top:10px;
+    }
     div#vis1 {
     padding: 50px;
     width: 50%;
@@ -29,7 +36,7 @@
 </head>
 <body>
   <h1 id="heading1">Fatal Traffic Accidents Between 2014 And 2019</h1>
-
+  <h3>Overview of Fatal Traffic Accidents by Gender</h3>
   <div id="vis1" class = "center"></div>
 
   <script type="text/javascript">
