--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <style>
     body {
     padding: 25px;
-    background-color: lightgray;
-    opacity: 0.1;
+    background-color: #f2f2f2;
     }
     h1 {
       color:gray;
