--- a/index.html
+++ b/index.html
@@ -13,23 +13,20 @@
     background-color: #f2f2f2;
     }
     h1 {
-      color:gray;
+      color:#545454;
       text-align: center;
       font-family: verdana;
       padding-bottom:1cm;
       padding-top:1cm;
     }
     h3 {
-      color:gray;
-      padding-left: 25px;
+      color:#545454;
+      padding-left: 100px;
       font-family: verdana;
-      padding-bottom:10px;
       padding-top:10px;
     }
     div#vis1 {
-    padding: 50px;
-    width: 50%;
-    margin: auto;
+    padding: 100px;
     }
   </style>
 </head>
