--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     h1 {
       color:#545454;
       text-align: center;
-      font-family: verdana;
+      font-family: helvetica;
       padding-bottom:1cm;
       padding-top:1cm;
     }
     h3 {
       color:#545454;
       padding-left: 100px;
-      font-family: verdana;
+      font-family: helvetica;
       padding-top:10px;
     }
     div#vis1 {
