--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       color:#545454;
       padding-left: 100px;
       font-family: helvetica;
-      padding-top:10px;
+      padding-top:20px;
     }
     div#vis1 {
-    padding: 100px;
+    padding-left: 100px;
     }
   </style>
 </head>
