--- a/index.html
+++ b/index.html
@@ -25,13 +25,23 @@
       font-family: helvetica;
       padding-top:20px;
     }
-    div#vis1 {
-    padding-left: 100px;
+    #vis1 {
+      padding-left: 100px;
+      margin:0 auto;
+    }
+    p {
+      text-align: center;
+      margin:0 auto;
     }
   </style>
 </head>
 <body>
   <h1 id="heading1">Fatal Traffic Accidents Between 2014 And 2019</h1>
+  
+  <div class="container">
+    <p>Information about all fatal traffic accidents in Victoria between 2014 and 2019 were recorded. A total of 1358 fatal accidents occured in this time period </p>
+  </div>
+  
   <h3>Overview of Fatal Traffic Accidents by Gender</h3>
   <div id="vis1" class = "center"></div>
 
