--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       text-align: center;
       color:#545454;
       border-style: solid;
-      border-width: 10px;
+      border-width: 5px;
+      padding: 100px;
     }
     .keyword {
       color: #e64e4e;
@@ -44,7 +45,8 @@
   <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
   
   <div class="container">
-    <p>Information about all fatal traffic accidents in Victoria between 2014 and 2019 were recorded. A total of 1358 fatal accidents occured in this time period </p>
+    <p>Information about all fatal traffic accidents in Victoria between 2014 and 2019 were recorded.
+      A total of 1358 fatal accidents occured in this time period </p>
   </div>
   
   <h3>
