--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     p {
       text-align: center;
       color:#545454;
-      border-style: solid;
+      border-left-style: solid;
       border-width: 5px;
       padding: 100px;
     }
