--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
     }
     p {
       text-align: center;
+      padding: 100px;
       color:#545454;
       border-left-style: solid;
       border-width: 5px;
-      padding: 100px;
+      border-color: #e64e4e;
     }
     .keyword {
       color: #e64e4e;
