--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
       margin:0 auto;
     }
     p {
-      text-align: center;
       padding: 100px;
       color:#545454;
-      border-left-style: solid;
+      border-style: solid;
       border-width: 5px;
       border-color: #e64e4e;
     }
