--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     background-color: #f2f2f2;
     }
     h1 {
-      color:#e64e4e;
+      color:#545454;
       text-align: center;
       font-family: helvetica;
       padding-bottom:1cm;
@@ -27,9 +27,8 @@
     }
     #vis1 {
       padding-left: 100px;
-      margin:0 auto;
     }
-    p {
+    .container {
       padding: 100px;
       color:#545454;
       border-style: solid;
