--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     .container {
       padding: 100px;
       color:#545454;
-      border-style: solid;
-      border-width: 5px;
-      border-color: #e64e4e;
+      outline-style: solid;
+      outline-width: 5px;
+      outline-color: #e64e4e;
     }
     .keyword {
       color: #e64e4e;
@@ -43,7 +43,7 @@
 <body>
   <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
   
-  <div class="container">
+  <div class = "container">
     <p>Information about all fatal traffic accidents in Victoria between 2014 and 2019 were recorded.
       A total of 1358 fatal accidents occured in this time period </p>
   </div>
