--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       padding-left: 100px;
     }
     .container {
-      padding: 100px;
+      margin-left: 100px;
       color:#545454;
-      outline-style: solid;
-      outline-width: 5px;
-      outline-color: #e64e4e;
+      border-style: solid;
+      border-width: 5px;
+      border-color: #e64e4e;
     }
     .keyword {
       color: #e64e4e;
