--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     .container {
       margin-left: 100px;
       color:#242424;
-      border-style: solid;
+      border-left-style: solid;
       border-width: 5px;
       border-color: #e64e4e;
     }
