--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       color:#242424;
       text-align: center;
       font-family: helvetica;
+      font-size = 24px;
       padding-bottom:1cm;
       padding-top:1cm;
     }
@@ -31,6 +32,7 @@
     .container {
       margin-left: 100px;
       color:#242424;
+      font-family: helvetica;
       border-left-style: solid;
       border-width: 5px;
       border-color: #e64e4e;
