--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       border-left-style: solid;
       border-width: 5px;
       border-color: #e64e4e;
+      background-color: white;
     }
     .keyword {
       color: #e64e4e;
