--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       border-width: 5px;
       border-color: #e64e4e;
       background-color: white;
+      padding-left: 2px;
     }
     .keyword {
       color: #e64e4e;
