--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     }
     .container {
       margin-left: 100px;
+      margin-right: 100px;
       padding: 5px;
       color:#242424;
       font-family: helvetica;
