--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     h1 {
       color:#242424;
       text-align: center;
-      font-family: helvetica;
+      font-family: geneva;
       font-size = 36px;
       padding-bottom:1cm;
       padding-top:1cm;
@@ -23,7 +23,7 @@
     h3 {
       color:#545454;
       padding-left: 100px;
-      font-family: helvetica;
+      font-family: geneva;
       padding-top:20px;
     }
     #vis1 {
@@ -34,7 +34,7 @@
       margin-right: 100px;
       padding: 5px;
       color:#242424;
-      font-family: helvetica;
+      font-family: geneva;
       border-left-style: solid;
       border-width: 5px;
       border-color: #e64e4e;
