--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     h1 {
       color:#242424;
       text-align: center;
-      font-family: geneva;
-      font-size = 36px;
+      font-family: verdana;
+      font-size = 52px;
       padding-bottom:1cm;
       padding-top:1cm;
     }
     h3 {
       color:#545454;
       padding-left: 100px;
-      font-family: geneva;
+      font-family: verdana;
       padding-top:20px;
     }
     #vis1 {
@@ -33,9 +33,9 @@
       margin-left: 100px;
       margin-right: 100px;
       padding: 5px;
-      padding-left: 5px;
+      padding-left: 20px;
       color:#242424;
-      font-family: geneva;
+      font-family: verdana;
       border-left-style: solid;
       border-width: 5px;
       border-color: #e64e4e;
