--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
       margin-left: 100px;
       margin-right: 100px;
       padding: 5px;
-      padding-left: 20px;
+      padding-left: 10px;
       color:#242424;
       font-family: verdana;
+      font-size: 15px;
       border-left-style: solid;
       border-width: 5px;
       border-color: #e64e4e;
