--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       padding: 5px;
       padding-left: 10px;
       color:#242424;
-      font-family: verdana;
+      font-family: arial;
       font-size: 15px;
       border-left-style: solid;
       border-width: 5px;
