--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     h1 {
       color:#242424;
       text-align: center;
-      font-family: verdana;
-      font-size = 52px;
+      font-family: arial;
+      font-size = 68px;
       padding-bottom:1cm;
       padding-top:1cm;
     }
     h3 {
       color:#545454;
       padding-left: 100px;
-      font-family: verdana;
+      font-family: arial;
       padding-top:20px;
     }
     #vis1 {
