--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       font-size: 15px;
       border-left-style: solid;
       border-width: 5px;
-      border-color: #e64e4e;
+      border-color: #961111;
       background-color: white;
     }
     .keyword {
-      color: #e64e4e;
+      color: #961111;
     }
   </style>
 </head>
