--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
   <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
   
   <div class = "container">
-    <p>Information about all fatal traffic accidents in Victoria between 2014 and 2019 were recorded.
-      A total of 1358 fatal accidents occured in this time period </p>
+    <p>All fatal traffic accidents in Victoria between the years 2014 and 2019 were recorded.
+      Information regarding accident location, individuals involved and details about how the accident occurred were noted and provided by VicRoads.
+      A total of 1358 fatal accidents occured during this time period. <br> Data source: https://discover.data.vic.gov.au/dataset/fatal-crashes-lives-lost-last-5-years-to-date1
+      <br> Full metadata: http://data.vicroads.vic.gov.au/metadata/Fatal_Crashes.html</p>
   </div>
   
   <h3>
