--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       color:#242424;
       text-align: center;
       font-family: arial;
-      font-size = 68px;
+      font-size: 150%;
       padding-bottom:1cm;
       padding-top:1cm;
     }
