--- a/index.html
+++ b/index.html
@@ -55,8 +55,11 @@
     <p>All fatal traffic accidents in Victoria between the years 2014 and 2019 were recorded.
       Information regarding accident location, individuals involved and details about how the accident occurred were noted and provided by VicRoads.
       A total of 1358 fatal accidents occured during this time period.<br>
+    </p>
+    <p>
       <br> Data source: <a href="https://discover.data.vic.gov.au/dataset/fatal-crashes-lives-lost-last-5-years-to-date1"></a>
-      <br> Full metadata: <a href="http://data.vicroads.vic.gov.au/metadata/Fatal_Crashes.html"></a></p>
+      <br> Full metadata: <a href="http://data.vicroads.vic.gov.au/metadata/Fatal_Crashes.html"></a>
+    </p>
   </div>
   
   <h3>
