--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       A total of 1358 fatal accidents occured during this time period.<br>
     </p>
     <p>
-      <br> Data source: <a href="https://discover.data.vic.gov.au/dataset/fatal-crashes-lives-lost-last-5-years-to-date1"></a>
+      <br><a href="https://discover.data.vic.gov.au/dataset/fatal-crashes-lives-lost-last-5-years-to-date1">Click here to access data source</a>
       <br> Full metadata: <a href="http://data.vicroads.vic.gov.au/metadata/Fatal_Crashes.html"></a>
     </p>
   </div>
