--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     }
     a {
      color: #eb5252; 
+     font-size: 12px;
     }
   </style>
 </head>
@@ -59,7 +60,7 @@
       Information regarding accident location, individuals involved and details about how the accident occurred were noted and provided by VicRoads.
       A total of 1358 fatal accidents occured during this time period.<br>
       <br><a href="https://discover.data.vic.gov.au/dataset/fatal-crashes-lives-lost-last-5-years-to-date1">Click here to access data source</a>
-      <br> Full metadata: <a href="http://data.vicroads.vic.gov.au/metadata/Fatal_Crashes.html">Click here to view full metadata for datasource</a>
+      <br><a href="http://data.vicroads.vic.gov.au/metadata/Fatal_Crashes.html">Click here to view full metadata for datasource</a>
     </p>
   </div>
   
