--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       margin-right: 150px;
       padding: 5px;
       padding-left: 10px;
+      padding-right: 10px;
       color:#242424;
       font-family: arial;
       font-size: 15px;
