--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
   
   <div class = "container">
-    <p>All fatal traffic accidents in Victoria between the years 2014 and 2019 were recorded.
+    <p>All fatal traffic accidents in Victoria between the years <span class="keyword">2014</span> and <span class="keyword">2019</span> were recorded.
       Information regarding accident location, individuals involved and details about how the accident occurred were noted and provided by VicRoads.
       A total of <span class="keyword">1358</span> fatal accidents occured during this time period.<br>
       <br><a href="https://discover.data.vic.gov.au/dataset/fatal-crashes-lives-lost-last-5-years-to-date1">Click here to access data source</a>
