--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       color:#545454;
       padding-left: 150px;
       font-family: arial;
-      padding-top:20px;
+      font-size: 22px;
+      padding-top:25px;
     }
     #vis1 {
       padding-left: 150px;
