--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <style>
     body {
     padding: 25px;
+    background-color: "#f2f2f2";
     }
     h1 {
       color:#242424;
@@ -41,7 +42,7 @@
       border-left-style: solid;
       border-width: 5px;
       border-color: #961111;
-      background-color: #f2f2f2;
+      background-color: white;
     }
     .mainkeyword {
       color: #961111;
