--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
     body {
     padding: 25px;
-    background-color: "#f2f2f2";
+    background-color: #f2f2f2;
     }
     h1 {
       color:#242424;
@@ -28,7 +28,8 @@
       padding-top:25px;
     }
     #vis1 {
-      padding-left: 150px;
+      margin: auto;
+      width: 50%;
     }
     .container {
       margin-left: 150px;
