--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <span class="mainkeyword">Overview</span>
     of Fatal Traffic Accidents by Gender
   </h3>
-  <div id="vis1" class = "center"></div>
+  <div id="vis1"></div>
 
   <script type="text/javascript">
     var spec = "https://ctra0024.github.io/FIT3179/stacked_and_line_overview.json";
