--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
     }
     #vis1 {
       margin: auto;
+      display:block;
       width: 50%;
-      padding: 150px;
+      padding-left: 150px;
     }
     .container {
       margin-left: 150px;
