--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
     #vis1 {
       margin: auto;
-      display:block;
+      display:inline-block;
       width: 50%;
       padding-left: 150px;
     }
