--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
       padding-top:25px;
     }
     #vis1 {
-      margin: auto;
-      display:inline-block;
+      left: 50%;
       width: 50%;
       padding-left: 150px;
     }
