--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       left: 50%;
       width: 50%;
       padding-left: 150px;
+      margin-right: -50%;
     }
     .container {
       margin-left: 150px;
