--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       width: 50%;
       padding-left: 150px;
       margin-right: -50%;
+      transform: translate(-50%, -50%);
     }
     .container {
       margin-left: 150px;
