--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       padding-left: 150px;
       margin-right: -50%;
       transform: translate(-50%, -50%);
-      position: relative;
+      position: absolute;
     }
     .container {
       margin-left: 150px;
