--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
       padding-top:25px;
     }
     #vis1 {
-      left: 50%;
-      padding-left: 150px;
-      margin-right: -50%;
-      transform: translate(-50%, -50%);
-      position: absolute;
+      display: block;
+      margin: auto;
+      width: 50%;
     }
     .container {
       margin-left: 150px;
