--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
       padding-top:25px;
     }
     #vis1 {
-      display: block;
-      margin: auto;
-      width: 50%;
+      width: 600px;
+      margin: 0 auto;
     }
     .container {
       margin-left: 150px;
