--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
     #vis1 {
       width: 600px;
-      margin: 0 auto;
+      margin: auto;
     }
     .container {
       margin-left: 150px;
