--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
       padding-top:25px;
     }
     #vis1 {
-      width: 600px;
-      height: 400px;
-      margin: auto;
+      position: relative;
+	    left: 50%;
     }
     .container {
       margin-left: 150px;
