--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
       padding-top:25px;
     }
     #vis1 {
-      position: relative;
-      left: 19%;
-      height: 300%;
+      align-items: center;
+      justify-content: center;
     }
     .container {
       margin-left: 150px;
