--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
       padding-top:25px;
     }
     #vis1 {
-      align-items: center;
-      justify-content: center;
+      display: block;
+      margin-left: auto;
+      margin-right: auto
     }
     .container {
       margin-left: 150px;
