--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
       padding-top:25px;
     }
     #vis1 {
-      display: block;
-      margin-left: auto;
-      margin-right: auto
+      margin: auto;
+      width: 50%;
     }
-    .container {
+    .text {
       margin-left: 150px;
       margin-right: 150px;
       padding: 5px;
@@ -62,7 +61,7 @@
 <body>
   <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
   
-  <div class = "container">
+  <div class = "text">
     <p>All fatal traffic accidents in Victoria between the years <span class="keyword">2014</span> and <span class="keyword">2019</span> were recorded.
       Information regarding accident location, individuals involved and details about how the accident occurred were noted and provided by VicRoads.
       A total of <span class="keyword">1358</span> fatal accidents occured during this time period.<br>
