--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       padding-top:25px;
     }
     #vis1 {
-      margin: auto;
-      width: 50%;
+      display: inline-block;
+      margin: 0 auto;
     }
     .text {
       margin-left: 150px;
