--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       padding-top:25px;
     }
     #vis1 {
-      display: inline-block;
-      margin: 0 auto;
+      display: flex;
+      justify-content: space-around;
     }
     .text {
       margin-left: 150px;
@@ -56,6 +56,10 @@
      color: #961111; 
      font-size: 14px;
     }
+    .grid-item {
+     background-color: burgundy; 
+    }
+    
   </style>
 </head>
 <body>
@@ -82,6 +86,11 @@
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
   </script>
+  
+  <div class="grid-container">
+    <div class="grid-item">1</div>
+    <div class="grid-item">2</div>
+  </div> 
   
 </body>
 </html>
