--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
      font-size: 14px;
     }
     .grid-item {
-     background-color: burgundy; 
+     background-color: white;
+      height: 50%;
+      width: 50%;
     }
     
   </style>
@@ -88,8 +90,12 @@
   </script>
   
   <div class="grid-container">
-    <div class="grid-item">1</div>
-    <div class="grid-item">2</div>
+    <div class="grid-item">
+      placeholder visualisation 2
+    </div>
+    <div class="grid-item">
+      placeholder text for visualisation 2
+    </div>
   </div> 
   
 </body>
