--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
       padding-top:25px;
     }
     #vis1 {
-      display: flex;
-      justify-content: space-around;
+      margin: 0 auto;
     }
     .text {
       margin-left: 150px;
@@ -60,6 +59,7 @@
      background-color: white;
       height: 50%;
       width: 50%;
+      margin: 0 auto;
     }
     
   </style>
