--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@
       margin: 0 auto;
     }
     .card-container {
-      background-color: white;
       margin-left: 150px;
       margin-right: 150px;
       margin: 0 auto;
+      display:inline-block;
     }
     .card-stat {
+      background-color: white;
       margin: 0 auto;
       font-size: 22px;
       font-family: arial;
