--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
     .card-stat {
       background-color: white;
       margin: 0 auto;
+      width: 50%;
+      height: 50%;
       font-size: 22px;
       font-family: arial;
     }
