--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     .card-stat {
       background-color: white;
       margin: 0 auto;
+      text-align: center;
       width: 50%;
       height: 50%;
       font-size: 22px;
