--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
       padding-top:25px;
     }
     #vis1 {
-      margin: 0 auto;
-      width: 80%;
+      margin-left: auto;
+      margin-right: auto;
+      text-align:center;
     }
     .text {
       margin-left: 150px;
@@ -63,15 +64,18 @@
       margin: 0 auto;
     }
     .card-container {
+      display:inline-block;
       margin-left: 150px;
       margin-right: 150px;
       margin: 0 auto;
-      display:inline-block;
+      
     }
     .card-stat {
+      display:inline-block;
       background-color: white;
       margin: 0 auto;
       text-align: center;
+      font-weight: bold;
       width: 50%;
       height: 50%;
       font-size: 22px;
@@ -113,15 +117,6 @@
     <div class="card-stat">
       % of Accidents involving Male Drivers:<br>
       <span class="mainkeyword">72.16%</span>
-    </div>
-  </div> 
-  
-  <div class="grid-container">
-    <div class="grid-item">
-      placeholder visualisation 2
-    </div>
-    <div class="grid-item">
-      placeholder text for visualisation 2
     </div>
   </div> 
   
