--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       margin: 0 auto;
     }
     .card-container {
+      padding-top:25px;
       display:inline-block;
       margin-left: 150px;
       margin-right: 150px;
