--- a/index.html
+++ b/index.html
@@ -63,15 +63,8 @@
       margin-right: 150px;
       margin: 0 auto;
     }
-    .card-container {
-      padding-top:25px;
-      display:inline-block;
-      margin-left: 150px;
-      margin-right: 150px;
-      margin: 0 auto;
-      
-    }
-    .card-stat {
+    .card {
+      padding-top:30px;
       display:inline-block;
       background-color: white;
       margin: 0 auto;
@@ -110,16 +103,14 @@
     }).catch(console.error);
   </script>
   
-  <div class="card-container">
-    <div class="card-stat">
-      % of Accidents involving Female Drivers:<br>
-      <span class="mainkeyword">27.84%</span>
-    </div>
-    <div class="card-stat">
-      % of Accidents involving Male Drivers:<br>
-      <span class="mainkeyword">72.16%</span>
-    </div>
-  </div> 
+  <div class="card">
+    % of Accidents involving Female Drivers:<br>
+    <span class="mainkeyword">27.84%</span>
+  </div>
+  <div class="card">
+    % of Accidents involving Male Drivers:<br>
+    <span class="mainkeyword">72.16%</span>
+  </div>
   
 </body>
 </html>
