--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     #vis1 {
       margin-left: auto;
       margin-right: auto;
-      text-align:center;
+      display:inline-block;
     }
     .text {
       margin-left: 150px;
@@ -56,12 +56,6 @@
     a {
      color: #961111; 
      font-size: 14px;
-    }
-    .grid-item {
-     background-color: white;
-      margin-left: 150px;
-      margin-right: 150px;
-      margin: 0 auto;
     }
     .card {
       padding-top:30px;
