--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
     .card {
       display:inline-block;
       padding-top:150px;
+      margin-left: 150px;
+      margin-right: 150px;
       background-color: white;
       margin: 0 auto;
       text-align: center;
