--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     }
     .card {
       display:inline-block;
-      padding-top:150px;
+      margin-top:150px;
       margin-left: 150px;
       margin-right: 150px;
       background-color: white;
