--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
     }
     .card {
       display:inline-block;
+      padding: 10px;
+      position: relative;
       margin-top:150px;
       margin-left: 150px;
       margin-right: 150px;
