--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     #vis1 {
       margin-left: auto;
       margin-right: auto;
+      margin: auto;
       display:inline-block;
     }
     .text {
@@ -59,7 +60,8 @@
     }
     .card {
       display:inline-block;
-      padding: 10px;
+      padding-top: 15px;
+      padding-bottom: 15px;
       position: relative;
       margin-top:150px;
       margin-left: 150px;
