--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       display:inline-block;
       padding-top: 15px;
       padding-bottom: 15px;
-      position: relative;
+      position: static;
       margin-top:150px;
       margin-left: 150px;
       margin-right: 150px;
