--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
       margin-left: auto;
       margin-right: auto;
       margin: auto;
-      display:inline-block;
     }
     .text {
       margin-left: 150px;
@@ -60,9 +59,11 @@
     }
     .card {
       display:inline-block;
+      background-color: blue;
       padding-top: 15px;
       padding-bottom: 15px;
       margin-top:500px;
+      position: static;
       margin-left: 150px;
       margin-right: 150px;
       background-color: white;
