--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     }
     .card {
       display:inline-block;
-      background-color: blue;
+      background-color: grey;
       padding-top: 15px;
       padding-bottom: 15px;
       margin-top:500px;
