--- a/index.html
+++ b/index.html
@@ -59,13 +59,10 @@
     }
     .card {
       display:inline-block;
-      background-color: grey;
+      background-color: white;
       padding-top: 15px;
       padding-bottom: 15px;
       margin-top:500px;
-      position: static;
-      margin-left: 150px;
-      margin-right: 150px;
       margin: 0 auto;
       text-align: center;
       font-weight: bold;
@@ -73,6 +70,11 @@
       height: 25%;
       font-size: 22px;
       font-family: arial;
+    }
+    .card-text {
+      color: #961111;
+      font-weight: bold;
+      font-size: 22px;
     }
     
   </style>
@@ -104,11 +106,11 @@
   
   <div class="card">
     % of Accidents involving Female Drivers:<br>
-    <span class="mainkeyword">27.84%</span>
+    <span class="card-text">27.84%</span>
   </div>
   <div class="card">
     % of Accidents involving Male Drivers:<br>
-    <span class="mainkeyword">72.16%</span>
+    <span class="card-text">72.16%</span>
   </div>
   
 </body>
