--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       height: 25%;
       font-size: 22px;
       font-family: arial;
+      position: relative;
     }
     .card-text {
       color: #961111;
