--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       font-size: 22px;
       font-family: arial;
       position: relative;
+      display: inline-block;
     }
     .card-text {
       color: #961111;
