--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
       background-color: white;
       padding-top: 15px;
       padding-bottom: 15px;
-      margin-top: 500px;
-      margin: 0 auto;
+      margin-top: 300%;
       text-align: center;
       font-weight: bold;
       width: 25%;
