--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
       background-color: white;
       padding-top: 15px;
       padding-bottom: 15px;
-      margin-top: 300%;
+      margin-top: 300px;
       text-align: center;
       font-weight: bold;
       width: 25%;
       height: 25%;
       font-size: 22px;
       font-family: arial;
-      position: relative;
+      position: absolute;
       display: inline-block;
     }
     .card-text {
