--- a/index.html
+++ b/index.html
@@ -59,17 +59,16 @@
     }
     .card {
       background-color: white;
+      position: relative;
+      display: inline-block;
       padding-top: 15px;
       padding-bottom: 15px;
-      margin-top: 300px;
+      top: 100px;
       text-align: center;
       font-weight: bold;
-      width: 25%;
-      height: 25%;
       font-size: 22px;
       font-family: arial;
-      position: absolute;
-      display: inline-block;
+      
     }
     .card-text {
       color: #961111;
