--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       margin-left: auto;
       margin-right: auto;
       margin: auto;
+      position: relative;
     }
     .text {
       margin-left: 150px;
@@ -63,7 +64,7 @@
       display: inline-block;
       padding-top: 15px;
       padding-bottom: 15px;
-      top: 100px;
+      top: 200px;
       text-align: center;
       font-weight: bold;
       font-size: 22px;
