--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     }
     .card {
       background-color: white;
-      display: inline-block;
       padding-top: 15px;
       padding-bottom: 15px;
-      top: 500px;
+      top: 200px;
+      position: relative;
       text-align: center;
       font-weight: bold;
       font-size: 22px;
