--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
       background-color: white;
       padding-top: 15px;
       padding-bottom: 15px;
-      top: 200px;
+      top: 100px;
+      width: 100px;
+      height: 100px
       position: relative;
       text-align: center;
       font-weight: bold;
