--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       padding-top: 15px;
       padding-bottom: 15px;
       top: 100px;
-      width: 100px;
-      height: 100px
+      width: 25%;
+      height: 25%;
       position: relative;
       text-align: center;
       font-weight: bold;
