--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
      padding-bottom: 15px;
      margin-left: 150px;
      margin-right: 150px;
+     margin: 0 auto;
     }
     .card {
       background-color: white;
