--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       padding-bottom: 15px;
       width: 25%;
       height: 25%;
-      margin: 0 auto;
+      margin: auto;
       display: inline-block;
       text-align: center;
       font-weight: bold;
