--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
      padding-bottom: 15px;
      margin-left: 150px;
      margin-right: 150px;
+     margin: auto;
+     align-items: center;
     }
     .card {
       background-color: white;
