--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
      margin-right: 150px;
      margin: auto;
      align-items: center;
+     width: 80%;
     }
     .card {
       background-color: white;
