--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
       padding-top:25px;
     }
     #vis1 {
-      margin-left: auto;
-      margin-right: auto;
-      margin: auto;
+    display: flex;
+    justify-content: center;
     }
     .text {
       margin-left: 150px;
@@ -60,10 +59,8 @@
     .card-container {
      padding-top: 15px;
      padding-bottom: 15px;
-     margin-left: 150px;
-     margin-right: 150px;
-     margin: auto;
-     align-items: center;
+     display: flex;
+     justify-content: center;
      width: 80%;
     }
     .card {
