--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <div id="vis1"></div>
 
   <script type="text/javascript">
-    var spec = "https://ctra0024.github.io/FIT3179/stacked_and_line_overview.json";
+    var spec = "https://ctra0024.github.io/FIT3179/overview.json";
     vegaEmbed('#vis1', spec).then(function(result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
