--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       background-color: white;
       padding-top: 15px;
       padding-bottom: 15px;
+      margin-top: 50px;
       width: 25%;
       height: 25%;
       margin: auto;
