--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     #vis1 {
     display: flex;
     justify-content: center;
+    margin-left: 150px;
+    margin-right: 150px;
+    }
+    #vis2 {
+    display: flex;
+    justify-content: center;
     }
     .text {
       margin-left: 150px;
@@ -61,13 +67,13 @@
      padding-bottom: 15px;
      display: flex;
      justify-content: center;
+     margin-top: 50px;
      width: 80%;
     }
     .card {
       background-color: white;
       padding-top: 15px;
       padding-bottom: 15px;
-      margin-top: 50px;
       width: 25%;
       height: 25%;
       margin: auto;
@@ -125,6 +131,11 @@
       <span class="card-text">72.16%</span>
     </div>
    </div>
+  
+  <h3>
+    <span class="mainkeyword">Accident Types</span>
+    by Victim Road User Types
+  </h3>
   
   <div id="vis2"></div>
   
