--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
      display: flex;
      justify-content: center;
      margin-top: 50px;
-     width: 80%;
     }
     .card {
+      color: #545454;
       background-color: white;
       padding-top: 15px;
       padding-bottom: 15px;
-      width: 25%;
-      height: 25%;
+      width: 30%;
+      height: 30%;
       margin: auto;
       display: inline-block;
       text-align: center;
