--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
   
   <div class="card-container">
     <div class="card">
-      <span class="card-text">27.84%</span><br><br>
-      % of Accidents involving Female Drivers<br>
+      <br><span class="card-text">27.84%</span><br>
+      % of Accidents involving Female Drivers<br><br>
     </div>
     <div class="card">
-      <span class="card-text">72.16%</span><br><br>
-      % of Accidents involving Male Drivers<br>
+      <br><span class="card-text">72.16%</span><br>
+      % of Accidents involving Male Drivers<br><br>
     </div>
    </div>
   
