--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
   
   <div class="card-container">
     <div class="card">
-      <br><span class="card-text">27.84%</span><br>
+      <br><span class="card-text">27.84%</span><br><br>
       % of Accidents involving Female Drivers<br><br>
     </div>
     <div class="card">
-      <br><span class="card-text">72.16%</span><br>
+      <br><span class="card-text">72.16%</span><br><br>
       % of Accidents involving Male Drivers<br><br>
     </div>
    </div>
