--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
     }
     .card {
       color: #545454;
+      border: 2px solid #961111;
+      border-radius: 8px;
       background-color: white;
       padding-top: 25px;
       padding-bottom: 25px;
