--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     .card-text {
       color: #961111;
       font-weight: bold;
-      font-size: 48px;
+      font-size: 150%;
     }
     
   </style>
