--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     .card {
       color: #545454;
       border: 5px solid #961111;
-      border-radius: 15px;
+      border-radius: 30px;
       background-color: white;
       padding-top: 25px;
       padding-bottom: 25px;
@@ -123,11 +123,11 @@
   <div class="card-container">
     <div class="card">
       <br><span class="card-text">27.84%</span><br><br>
-      % of Accidents involving Female Drivers<br><br>
+      of accidents involved female drivers<br><br>
     </div>
     <div class="card">
       <br><span class="card-text">72.16%</span><br><br>
-      % of Accidents involving Male Drivers<br><br>
+      of accidents involved male drivers<br><br>
     </div>
    </div>
   
