--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     padding: 25px;
     background-color: #f2f2f2;
     }
+    #icon1 {
+      position: relative;
+    }
     h1 {
       color:#242424;
       text-align: center;
@@ -104,6 +107,8 @@
 </head>
 <body>
   <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
+  
+  <img id="icon1" src="https://ctra0024.github.io/FIT3179/img4.json" alt="Car crash icon"> 
   
   <div class = "text">
     <p>All fatal traffic accidents in Victoria between the years <span class="keyword">2014</span> and <span class="keyword">2019</span> were recorded.
