--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
     #vis1 {
     display: flex;
     justify-content: center;
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-left: 150vh;
+    margin-right: 150vh;
     }
     #vis2 {
     display: flex;
     justify-content: center;
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-left: 150vh;
+    margin-right: 150vh;
     }
     #vis3 {
     display: flex;
     justify-content: center;
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-left: 150vh;
+    margin-right: 150vh;
     }
     .text {
       margin-left: 150px;
@@ -74,11 +74,11 @@
      font-size: 14px;
     }
     .card-container {
-     padding-top: 15px;
-     padding-bottom: 15px;
+     padding-top: 15vh;
+     padding-bottom: 15vh;
      display: flex;
      justify-content: center;
-     margin-top: 50px;
+     margin-top: 50vh;
     }
     .card {
       color: #545454;
