--- a/index.html
+++ b/index.html
@@ -33,20 +33,14 @@
     #vis1 {
     display: flex;
     justify-content: center;
-    margin-left: 150vh;
-    margin-right: 150vh;
     }
     #vis2 {
     display: flex;
     justify-content: center;
-    margin-left: 150vh;
-    margin-right: 150vh;
     }
     #vis3 {
     display: flex;
     justify-content: center;
-    margin-left: 150vh;
-    margin-right: 150vh;
     }
     .text {
       margin-left: 150px;
@@ -76,8 +70,7 @@
     .card-container {
      padding-top: 15vh;
      padding-bottom: 15vh;
-     display: flex;
-     justify-content: center;
+     margin: auto;
      margin-top: 50vh;
     }
     .card {
