--- a/index.html
+++ b/index.html
@@ -31,16 +31,15 @@
       padding-top:25px;
     }
     #vis1 {
-    display: flex;
-    justify-content: center;
+      margin: auto;
     }
     #vis2 {
-    display: flex;
-    justify-content: center;
+      margin: auto;
+      display: inline-block;
     }
     #vis3 {
-    display: flex;
-    justify-content: center;
+      display: flex;
+      justify-content: center;
     }
     .text {
       margin-left: 150px;
@@ -68,8 +67,6 @@
      font-size: 14px;
     }
     .card-container {
-     padding-top: 15vh;
-     padding-bottom: 15vh;
      margin: auto;
      margin-top: 10vh;
     }
