--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     .text {
       margin-left: 150px;
       margin-right: 150px;
+      margin-top: 15px;
       padding: 5px;
       padding-left: 10px;
       padding-right: 10px;
