--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
     }
     #vis1 {
       margin: auto;
+      width: 80%;
     }
     #vis2 {
       margin: auto;
       display: inline-block;
+      width: 80%;
     }
     #vis3 {
       display: flex;
