--- a/index.html
+++ b/index.html
@@ -72,22 +72,19 @@
     .card-container {
      margin: auto;
      margin-top: 5vh;
+     margin-bottom: 5vh;
     }
     .card {
       color: #545454;
       border: 5px solid #961111;
       border-radius: 30px;
       background-color: white;
-      padding-top: 25px;
-      padding-bottom: 25px;
       width: 25%;
       height: 25%;
-      margin: auto;
-      margin-bottom: 25px;
       display: inline-block;
       text-align: center;
       font-weight: bold;
-      font-size: 22px;
+      font-size: 18px;
       font-family: arial;
     }
     .card-text {
