--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     }
     .card-container {
      margin: auto;
+     display: inline-block;
      margin-top: 5vh;
      margin-bottom: 5vh;
     }
