--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       display: inline-block;
       text-align: center;
       font-weight: bold;
-      font-size: 18px;
+      font-size: 120%;
       font-family: arial;
     }
     .card-text {
