--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       padding-top:25px;
     }
     #vis1 {
-      margin: auto;
-      width: 80%;
+      top: 50%;
+      left: 50%;
     }
     #vis2 {
       margin: auto;
@@ -114,11 +114,13 @@
     <span class="mainkeyword">Overview</span>
     of Fatal Traffic Accidents
   </h3>
-  <div id="vis1"></div>
   
-  <div class = "text">
-    <p>There was an overall decrease in the number of fatal traffic accidents from 2014 to 2019, however the number of fatal traffic accidents by gender
-    </p>
+  <div class = "row1">
+    <div id="vis1"></div>
+    <div class = "text">
+      <p>There was an overall decrease in the number of fatal traffic accidents from 2014 to 2019, however the number of fatal traffic accidents by gender
+      </p>
+    </div>
   </div>
   
     <div class="card-container">
