--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
       font-size: 200%;
       padding-top:25px;
     }
+    .row1 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
     #vis1 {
-      top: 50%;
-      left: 50%;
     }
     #vis2 {
       margin: auto;
