--- a/index.html
+++ b/index.html
@@ -30,21 +30,17 @@
       font-size: 200%;
       padding-top:25px;
     }
-    .row1 {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
     #vis1 {
+      margin: auto;
+      width: 80%;
     }
     #vis2 {
       margin: auto;
-      display: inline-block;
       width: 80%;
     }
     #vis3 {
-      display: flex;
-      justify-content: center;
+      margin: auto;
+      width: 80%;
     }
     .text {
       margin-left: 150px;
@@ -118,15 +114,13 @@
     of Fatal Traffic Accidents
   </h3>
   
-  <div class = "row1">
-    <div id="vis1"></div>
-    <div class = "text">
-      <p>There was an overall decrease in the number of fatal traffic accidents from 2014 to 2019, however the number of fatal traffic accidents by gender
-      </p>
-    </div>
+  <div id="vis1"></div>
+  <div class = "text">
+    <p>There was an overall decrease in the number of fatal traffic accidents from 2014 to 2019, however the number of fatal traffic accidents by gender
+    </p>
   </div>
   
-    <div class="card-container">
+   <div class="card-container">
     <div class="card">
       <br><span class="card-text">27.84%</span><br><br>
       of accidents involved female drivers<br><br>
