--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <body>
   <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
   
-  <img id="icon1" src="img4.json" alt="Car crash icon"> 
+  <img id="icon1" src="https://ctra0024.github.io/FIT3179/img4.jpg" alt="Car crash icon"> 
   
   <div class = "text">
     <p>All fatal traffic accidents in Victoria between the years <span class="keyword">2014</span> and <span class="keyword">2019</span> were recorded.
