--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     }
     #icon1 {
       position: relative;
+      width: 10%;
+      height: 10%
     }
     h1 {
       color:#242424;
@@ -98,7 +100,7 @@
 <body>
   <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
   
-  <img id="icon1" src="https://ctra0024.github.io/FIT3179/img4.jpg" alt="Car crash icon"> 
+  <img id="icon1" src="https://ctra0024.github.io/FIT3179/img4.png" alt="Car crash icon"> 
   
   <div class = "text">
     <p>All fatal traffic accidents in Victoria between the years <span class="keyword">2014</span> and <span class="keyword">2019</span> were recorded.
