--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     background-color: #f2f2f2;
     }
     #icon1 {
-      position: relative;
-      width: 10%;
-      height: 10%
+      position: absolute;
+      width: 5%;
+      height: 5%
     }
     h1 {
       color:#242424;
