--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     }
     #icon1 {
       position: absolute;
-      width: 5%;
-      height: 5%
+      width: 7%;
+      height: 7%
+      display: inline-block;
     }
     h1 {
       color:#242424;
