--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
   <!-- Import vega-embed -->
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+  <!-- Import pure.css-->
+  <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <!-- custom style -->
   <style>
     body {
-    padding: 25px;
     background-color: #f2f2f2;
-    }
-    #icon1 {
-      position: absolute;
-      width: 7%;
-      height: 7%
-      display: inline-block;
+    padding-left: 150px;
+    padding-right: 150px;
     }
     h1 {
       color:#242424;
@@ -46,8 +46,6 @@
       width: 80%;
     }
     .text {
-      margin-left: 150px;
-      margin-right: 150px;
       margin-top: 15px;
       padding: 5px;
       padding-left: 10px;
@@ -100,8 +98,6 @@
 </head>
 <body>
   <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
-  
-  <img id="icon1" src="https://ctra0024.github.io/FIT3179/img4.png" alt="Car crash icon"> 
   
   <div class = "text">
     <p>All fatal traffic accidents in Victoria between the years <span class="keyword">2014</span> and <span class="keyword">2019</span> were recorded.
