--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
       padding-top:25px;
     }
     #vis1 {
+      margin: auto;
+      width: 20%;
+    }
+    #vis2 {
+      margin: auto;
+    }
+    #vis3 {
+      margin: auto;
     }
     #vis4 {
     }
@@ -107,7 +115,7 @@
   </h3>
   
   <!-- pure grid group -->
-    <div class="pure-g">
+    <div class="pure-g-r">
         <div class="pure-u-1-3">
           <div id="vis1"></div>
         </div>
