--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   </h3>
   
   <!-- pure grid group -->
-    <div class="pure-g-r">
+    <div class="pure-g">
         <div class="pure-u-1-3">
           <div id="vis1"></div>
         </div>
