--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
       font-size: 200%;
       padding-top:25px;
     }
+    .vis-container{
+      width: 100%;
+    }
     #vis1 {
       margin: auto;
     }
@@ -116,13 +119,13 @@
   <!-- pure grid group -->
     <div class="pure-g">
         <div class="pure-u-1-3">
-          <div id="vis1"></div>
+          <div id="vis1" class="vis-container"></div>
         </div>
         <div class="pure-u-1-3">
-          <div id="vis2"></div>
+          <div id="vis2" class="vis-container"></div>
         </div>
         <div class="pure-u-1-3">
-          <div id="vis3"></div>
+          <div id="vis3" class="vis-container"></div>
         </div>
     </div>
     <!-- end pure grid group -->
@@ -148,14 +151,14 @@
     by Victim Road User Types
   </h3>
   
-  <div id="vis4"></div>
+  <div id="vis4" class="vis-container"></div>
   
   <h3>
     <span class="mainkeyword">Average Ages</span>
     of Fatal Traffic Accidents by Gender
   </h3>
   
-  <div id="vis5"></div>
+  <div id="vis5" class="vis-container"></div>
   
   
   <script type="text/javascript">
