--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       width: 100%;
     }
     #vis1 {
-      width: 50%;
+      width: 100%;
       margin: auto;
     }
     #vis4 {
@@ -95,7 +95,21 @@
   </style>
 </head>
 <body>
-  <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
+
+  
+  <!-- pure grid group -->
+    <div class="pure-g">
+        <div class="pure-u-2-6">
+          <img src="https://ctra0024.github.io/FIT3179/img4.png" alt="car crash image">
+        </div>
+        <div class="pure-u-2-3">
+          <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
+        </div>
+        <div class="pure-u-2-6">
+          <img src="https://ctra0024.github.io/FIT3179/img4.png" alt="car crash image">
+        </div>
+    </div>
+    <!-- end pure grid group -->
   
   <div class = "text">
     <p>All fatal traffic accidents in Victoria between the years <span class="keyword">2014</span> and <span class="keyword">2019</span> were recorded.
