--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     padding-left: 150px;
     padding-right: 150px;
     }
+    #img4 {
+     width: 10px;
+     height: 10px;
+    }
     h1 {
       color:#242424;
       text-align: center;
@@ -100,7 +104,7 @@
   <!-- pure grid group -->
     <div class="pure-g">
         <div class="pure-u-2-6">
-          <img src="https://ctra0024.github.io/FIT3179/img4.png" alt="car crash image">
+          <img src="https://ctra0024.github.io/FIT3179/img4.png" id="img4" alt="car crash image">
         </div>
         <div class="pure-u-2-3">
           <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
