--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     padding-right: 150px;
     }
     #img4 {
-     width: 10px;
-     height: 10px;
+     width: 10%;
+     height: 10%;
+     display: inline-block;
     }
     h1 {
       color:#242424;
