--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       font-size: 300%;
       padding-bottom:1cm;
       padding-top:1cm;
+      display: inline-block;
     }
     h3 {
       color:#545454;
