--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
         </div>
         <div class="pure-u-2-6">
-          <img src="https://ctra0024.github.io/FIT3179/img4.png" alt="car crash image">
+          <img src="https://ctra0024.github.io/FIT3179/img4.png" id="img4" alt="car crash image">
         </div>
     </div>
     <!-- end pure grid group -->
