--- a/index.html
+++ b/index.html
@@ -104,18 +104,11 @@
 
   
   <!-- pure grid group -->
-    <div class="pure-g">
-        <div class="pure-u-2-6">
-          <img src="https://ctra0024.github.io/FIT3179/img4.png" id="img4" alt="car crash image">
-        </div>
-        <div class="pure-u-2-3">
-          <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
-        </div>
-        <div class="pure-u-2-6">
-          <img src="https://ctra0024.github.io/FIT3179/img4.png" id="img4" alt="car crash image">
-        </div>
+    <div>
+      <img src="https://ctra0024.github.io/FIT3179/img4.png" id="img4" alt="car crash image">
+      <h1 id="heading1"> Fatal Traffic Accidents Between 2014 And 2019</h1>
+      <img src="https://ctra0024.github.io/FIT3179/img4.png" id="img4" alt="car crash image">
     </div>
-    <!-- end pure grid group -->
   
   <div class = "text">
     <p>All fatal traffic accidents in Victoria between the years <span class="keyword">2014</span> and <span class="keyword">2019</span> were recorded.
