--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
     padding-right: 150px;
     }
     #img4 {
-     width: 10%;
-     height: 10%;
+     width: 7%;
+     height: 7%;
+     padding-top: 5px;
      display: inline-block;
     }
     h1 {
       color:#242424;
       text-align: center;
       font-family: arial;
-      font-size: 300%;
+      font-size: 225%;
       padding-bottom:1cm;
       padding-top:1cm;
       display: inline-block;
